New simple webpage

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
----
-layout: default
-title: Matthew Capewell
----
-
-<div class="wrap">
-	<p class="lead">Hi, I'm <strong>Matthew Capewell</strong>, a <strong>Software Architect</strong> from <strong>Cowes, Isle of Wight</strong>. User experience designer. Technology evangelist. Geek. Husband. Father. Fitness fanatic.</p>
-	<p>I am a Microsoft Certified Professional and have a wealth of experience (read as: I'm in my 30s) at all things Microsoft with my main programming language of choice being C#. I have worked to agile principals and acted as Scrum Master for some time...basically I know how to develop software in modern medium-sized teams. I am a great proponent in the philosophy of keeping things simple. Complicated and un-thought out software is easy to create. Creating software that is simple and intuitive is extremely difficult.</p>
-	<p><img src="/images/iphone.png" style="float: right; margin: -2em 0 1em 1em; max-width: 25%;">We're in the middle of a mobile revolution people, and all (not some) websites need to work on those little devices in our pockets. Either resize your browser or use my <a href="/iphone.html">mobile demo</a> to see how this website works on them little critters.</p>
-	<p>There's more boring stuff about me in <a href="/cv">my CV</a>. Or you can <del>find</del> <i>stalk</i> me on <a href="https://www.facebook.com/matthew.capewell.3">Facebook</a>, <a href="https://github.com/mcapewell">GitHub</a> or via email (<a href="mailto:matthewcapewell@gmail.com">matthewcapewell@gmail.com</a>).</p>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Matthew Capewell</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="description" content="The official webpage of Matthew Capewell" />
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div id="wrapper">
+            <header>
+                <h1>Matthew Capewell</h1>
+                <h2>Senior Software Engineer at Yokogawa</h2>
+                <nav>
+                    <ul>
+                        <li><a href="https://www.facebook.com/matthew.capewell.3"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/matthewcapewell"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/mcapewell"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+        <script src="https://use.fontawesome.com/47fb412963.js"></script>
+    </body>
+</html>
