--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Matthew Capewell</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="description" content="The official webpage of Matthew Capewell" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
