Added aria-label to social links for accessibility

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <h2>Senior Software Engineer at Yokogawa</h2>
                 <nav>
                     <ul>
-                        <li><a href="https://www.facebook.com/matthew.capewell.3"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/matthewcapewell"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/mcapewell"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.facebook.com/matthew.capewell.3" aria-label="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/matthewcapewell" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/mcapewell" aria-label="GitHub"><i class="fa fa-github"></i></a></li>
                     </ul>
                 </nav>
             </header>
